Fix for ICE-6957(Regression: ICE-2761 selectInputText has styling problem when overlapping richText component)

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime.css
@@ -1493,6 +1493,7 @@ table.iceSelInpDate tbody tr td table{
     border-right: 1px solid #666666;
     border-left: 1px solid #ABABAB;
     border-bottom: 1px solid #333333;
+    z-index:1;
 }
 
 .iceSelInpTxtRow {
